--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,8 +2,18 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+
+# environment variables
+.env
+
+# storage
+/storage
+
+# logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # testing
 /coverage
@@ -17,7 +27,3 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
