--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
